--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.12.1",
+    "bootstrap": "^5.3.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.0",
-    "react-router-dom": "^7.9.0",
+    "react-router": "^7.9.1",
+    "react-router-dom": "^7.9.1",
     "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
